init-container-demo/init-continer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: default
  labels:
    app: myapp
    version: v1
spec:
  containers:
    - name: myapp-container
      image: busybox:1.28.4
      command: [ 'sh', '-c', 'echo The app is running! && sleep 3600' ]
