init-container-demo/mydb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydb
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9377
