init-container-demo/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
